[gd_scene load_steps=5 format=3 uid="uid://drjcxodyo6bx5"]

[ext_resource type="Texture2D" uid="uid://bshg0rwtoxmre" path="res://assets/tower/tower_base/tower_base_1.png" id="1_qhmju"]
[ext_resource type="Script" uid="uid://c321ca40yp0g1" path="res://tower/tower_base.gd" id="1_s8k2i"]
[ext_resource type="Texture2D" uid="uid://crvej47h0lccb" path="res://assets/yuan.svg" id="3_pwkib"]

[sub_resource type="CircleShape2D" id="CircleShape2D_0sler"]
radius = 526.623

[node name="Tower" type="Sprite2D"]
top_level = true
position = Vector2(1, -1)
scale = Vector2(0.5, 0.493)
texture = ExtResource("1_qhmju")
script = ExtResource("1_s8k2i")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-1.70264, 4.57764e-05)
rotation = -1.21831
shape = SubResource("CircleShape2D_0sler")

[node name="upgrade_button" type="Button" parent="."]
offset_left = -44.0
offset_top = -48.6815
offset_right = 52.0
offset_bottom = 6.31846

[node name="destroy_button" type="Button" parent="."]
offset_left = -44.0
offset_top = 16.2272
offset_right = 53.0
offset_bottom = 64.2272

[node name="LevelLabel" type="Label" parent="."]
offset_left = -18.0
offset_top = -97.9716
offset_right = 22.0
offset_bottom = -74.9716
text = "Lv. 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RangeDisplay" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.392157)
position = Vector2(-1.00003, -10.5241)
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_pwkib")

[node name="MouseDetectionArea" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="MouseDetectionArea"]
polygon = PackedVector2Array(60, 44.6247, 56, -38.5396, 44, -93.3063, -46, -93.3063, -52, -34.4828, -56, 46.6531, -52, 83.1643, 58, 85.1927)
